--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,10 @@
-#game-container, .cell {
+#game-container {
+    display: grid;
+    grid-template-columns: repeat(3, 100px);
+    grid-template-rows: repeat(3, 100px);
+}
+
+.cell {
     border: 1px solid black;
 }
 
